# mipt_homeworks_2026

./: pyproject.toml
.github/workflows/: ci.yml
part3_types_conditions_loops_functions/: hw3.py
part4_oop/: Lecture with Seminar 45.ipynb  homework.md  hw45.py  interfaces.py
part4_oop/tests/: conftest.py  consts.py  test_dict_storage.py  test_fifo_policy.py  test_lfu_policy.py  test_lru_policy.py  test_mipt_cache.py
part5_decorators/: hw67.py  lecture_decorators.ipynb
